<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/activity_vertical_margin_detail"
    android:layout_marginTop="@dimen/activity_vertical_margin_detail"
    android:layout_marginEnd="@dimen/activity_vertical_margin_detail"
    android:background="@color/background_back_card">
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="240dp">
            <LinearLayout android:id="@+id/linear_layout_zap"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <RelativeLayout
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">
                    <ImageView android:id="@+id/image"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/zap300"
                        android:contentDescription="@string/immobile" />
                    <TextView android:id="@+id/sub_type_immobile"
                        style="@style/browser_immobile"
                        android:layout_marginTop="@dimen/activity_vertical_margin"
                        android:text="@string/test_type"/>
                    <LinearLayout android:id="@+id/linear_layout_sale"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentStart="true"
                        android:orientation="vertical">
                        <TextView android:id="@+id/price"
                            style="@style/browser_immobile"
                            android:text="@string/test_price"/>
                        <TextView android:id="@+id/address"
                            style="@style/browser_immobile"
                            android:text="@string/test_address"/>
                        <TextView android:id="@+id/detail"
                            style="@style/browser_immobile"
                            android:text="@string/test_detail_list"/>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/primary_dark">
                            <TextView android:id="@+id/sub_type_sale"
                                android:layout_width="match_parent"
                                android:gravity="center_horizontal"
                                android:textColor="@android:color/white"
                                android:layout_height="wrap_content"
                                android:text="@string/test_sub_sale"/>
                        </LinearLayout>
                    </LinearLayout>
                </RelativeLayout>
            </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>